Escribe en un archivo conservando datos anteriores

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 /Proyecto_Final/nbproject/private/
+/Manejo de excepciones - Java POO/
+/Manejo excepciones (Throw) - Java POO/
+/Propagacion de excepciones (Throw) - Java POO/
+/Proyecto_1/
+/Proyecto_Final/
+/ProyectoFinal/
+/ProyectoFinalDefinitivo/
+/ProyectoPilaDinamica/
+/ProyectoPrueba_1/
+/ProyectoTabla/
+/PruebaMVC/
+/pruebas_proyecto/
